# zagent

./: .env.example  AGENTS.md  LICENSE  Makefile  README.md  agent_project_architecture.md  compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
contracts/: README.md  agent-env.schema.json  artifacts.schema.json  run-spec.schema.json
docker/: compose.dev.yaml  runtime.Dockerfile
docs/: agent-env.md  architecture.md  index.md  launcher.md  mcp.md  plugin-system.md  project-structure.md  run-spec.md
examples/: run.fastapi-app.yaml  run.fix.yaml  run.research.yaml
examples/agent-env/: config.yaml
examples/agent-env/files/: extra_context.md
examples/agent-env/mcp/: servers.yaml
examples/agent-env/prompts/: system.md  task.md
examples/agent-env/rules/: global.md  repo.md
examples/agent-env/skills/: python.md
examples/workspaces/fastapi-app/: pyproject.toml  run.yaml
examples/workspaces/fastapi-app/.agent/: config.yaml
examples/workspaces/fastapi-app/.agent/artifacts/fastapi-app-smoke/: chat.jsonl  events.jsonl  result.json  state.json  summary.md  tools.jsonl
examples/workspaces/fastapi-app/.agent/files/: extra_context.md
examples/workspaces/fastapi-app/.agent/prompts/: system.md  task.md
examples/workspaces/fastapi-app/.agent/skills/: python.md
examples/workspaces/fastapi-app/src/application/: use_cases.py
examples/workspaces/fastapi-app/src/domain/: entities.py  repositories.py
examples/workspaces/fastapi-app/src/infrastructure/: database.py  repositories_impl.py
examples/workspaces/fastapi-app/src/presentation/: api.py  models.py
examples/workspaces/fastapi-app/tests/: test_books.py
examples/workspaces/test-workspace/: requirements.txt
(+15 files in other folders)
