[tool.poetry]
name = "book_tracker"
version = "0.1.0"
description = "FastAPI Book Tracker using Clean Architecture"
authors = ["Agent <agent@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.6.0"
sqlalchemy = "^2.0.27" # Using SQLAlchemy for easier SQLite setup in tests, though repo interface abstracts it.
# We'll keep httpx for potential external calls but focus on core requirements.

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^1.1.0"